# gnuradio_sdr

./: BPSK_timing.slx  PAM_Timing.slx  QPSK_complete.slx  QPSK_timing.slx  QPSK_timingClean.slx  aout_i.csv  bpskcrdedata.mat  decimate.py  farrow_interpolator.slx  general_spectrum_analysis.grc  pn_correlator.py  qa_decimate.py  qa_downsample.py  qa_matched_filter.py  qa_pn_correlator.py  qa_soqpsk_demod.py  qa_soqpsk_prototype_cc.py  qa_upsample.py  r_i.csv  r_q.csv  soqpsk_demod.py
A-Research/: QPSK_complete2.slx  QPSK_complete3.slx  QPSK_complete4.slx  QPSK_timing.slx.autosave  QPSK_timing.slx.r2016a  oqpskcrdata.mat  pll.m  qpsk.slx  qpsk.slx.r2015b
block_code/: README.md  aout_q.csv  soqpsk_prototype_cc.py
ecen485/: .~lock.lab7_pll.docx#  BPAM_Shell.slx.r2013b  Binary_PAM.slx  M2ascii.m  Presentation1.pptx  QPSK.slx.r2016a  QPSK_complete_2015.slx  bbtrdata.mat  bintoascii.m  bpsk_phase.slx  bpskcruwdata.mat  bpskdata.mat  copy.csv  derpage1.slx.r2015b  derpage2.slx  derpage5.slx.r2015b  derpage6.slx  derpage7.slx  derpage8.slx  myinit.m  oqpskdata.mat  pll_2.slx  qpsk_phase_uw.slx  qpsk_phase_uw.slx.r2015b  qpskdata.mat  rotate.m  thing.mat
extra/: downsample.py  hw9.m  matched_filter.py  qa_pn_correlator.py  untitled2.m
gr-telemetry/: CMakeLists.txt  MANIFEST.md
gr-telemetry/cmake/Modules/: telemetryConfig.cmake
gr-telemetry/docs/: README.telemetry
gr-telemetry/docs/doxygen/: Doxyfile.in
gr-telemetry/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-telemetry/grc/: CMakeLists.txt  telemetry_soqpsk_demod.xml
gr-telemetry/include/telemetry/: CMakeLists.txt  api.h
gr-telemetry/lib/: CMakeLists.txt  qa_telemetry.cc  qa_telemetry.h  test_telemetry.cc
gr-telemetry/python/: CMakeLists.txt  __init__.py  qa_soqpsk_demod.py  soqpsk_demod.py
gr-telemetry/swig/: CMakeLists.txt  telemetry_swig.i
matlab/: Demo4Colt.m  GeneratePN3.m  GeneratePN7.m  M2ascii.m  abits.csv  asciitobin.m  bintoascii.m  bits.csv  copy.csv  findAscii.m  matlab.mat  qpsk_prog.m  qpsk_raw.m  test_matlab
matlab/soqpsk/: SOQPSK_demod.m
matlab/soqpsk/__MACOSX/: ._SOQPSK-Block-Diagram.pptx
roundup/: Entries.md  mpsk_stage1.grc  mpsk_stage4.py  multipath_sim.py  symbol_sampling.grc  symbol_sampling.py
roundup/ecen485/: BPAM_Shell.slx  BPAM_Shell.slx.r2015b  QPSK.slx  QPSK_complete_2015.slx  ascii2qpsk.m  bb2data.mat  bb8data.mat  bpsktrdata.mat  derp.m  derpage3.slx  derpage3.slx.r2015b  derpage4.slx  derpage4.slx.r2015b  kfunc.m  lab7_pll.docx  page2.mat  pll_2.slx.r2015b  psk8data.mat  qam16data.mat  qpsk_phase_de.slx  qpsk_phase_de.slx.r2015b  qpskcompletedata.mat  qpskcrdedata.mat  qpskcruwdata.mat
